force-app/main/default/objects/ListView_Settings__mdt/ListView_Settings__mdt.object-meta.xml
<CustomObject>
    <label>ListViewSetting</label>
    <pluralLabel>ListViewSettings</pluralLabel>
</CustomObject>