force-app/main/default/objects/ListView_Settings__mdt/fields/developerName__c.field-meta.xml
<CustomField>
    <fullName>developerName__c</fullName>
    <label>developerName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>