force-app/main/default/objects/ListView_Settings__mdt/fields/FieldsToShow__c.field-meta.xml
<CustomField>
    <fullName>FieldsToShow__c</fullName>
    <label>FieldsToShow</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>