force-app/main/default/objects/ListView_Settings__mdt/fields/labelOfFields__c.field-meta.xml
<CustomField>
    <fullName>labelOfFields__c</fullName>
    <label>label of fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>