force-app/main/default/objects/ListView_Settings__mdt/fields/listViewName__c.field-meta.xml
<CustomField>
    <fullName>listViewName__c</fullName>
    <label>listViewName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>