force-app/main/default/objects/ListView_Settings__mdt/fields/logo__c.field-meta.xml
<CustomField>
    <fullName>logo__c</fullName>
    <label>logo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>