force-app/main/default/objects/ListView_Settings__mdt/fields/LookUPToShow__c.field-meta.xml
<CustomField>
    <fullName>LookUPToShow__c</fullName>
    <label>LookUPToShow</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>