force-app/main/default/objects/ListView_Settings__mdt/fields/Ordre__c.field-meta.xml
<CustomField>
    <fullName>Ordre__c</fullName>
    <label>Ordre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>