force-app/main/default/objects/ListView_Settings__mdt/fields/showMes__c.field-meta.xml
<CustomField>
    <fullName>showMes__c</fullName>
    <defaultValue>true</defaultValue>
    <label>show Mes</label>
    <type>Checkbox</type>
</CustomField>