force-app/main/default/objects/ListView_Settings__mdt/fields/ShowOwnerFilter__c.field-meta.xml
<CustomField>
    <fullName>ShowOwnerFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Owner Filter</label>
    <type>Checkbox</type>
</CustomField>