force-app/main/default/objects/ListView_Settings__mdt/fields/sobjectName__c.field-meta.xml
<CustomField>
    <fullName>sobjectName__c</fullName>
    <label>sobjectName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>