force-app/main/default/objects/ListView_Settings__mdt/fields/toDisplay__c.field-meta.xml
<CustomField>
    <fullName>toDisplay__c</fullName>
    <defaultValue>true</defaultValue>
    <label>toDisplay</label>
    <type>Checkbox</type>
</CustomField>