force-app/main/default/objects/ListView_Settings__mdt/fields/visibleToProfiles__c.field-meta.xml
<CustomField>
    <fullName>visibleToProfiles__c</fullName>
    <label>Visible To Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>