force-app/main/default/objects/ListView_Settings__mdt/fields/whereClause__c.field-meta.xml
<CustomField>
    <fullName>whereClause__c</fullName>
    <label>whereClause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>